favicon update. minor spacing fixes

--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -32,8 +32,8 @@
 
 .experience_details {
   display: flex;
-  justify-content: center;
-  gap: 1rem;
+  /* justify-content: center; */
+  gap: 1.5rem;
 }
 
 .experience_details-icon {
